--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ h1, h2, h3, h4, h5, h6 {
 	width: 100%;
 	height: 100%;
 	background-color: #0091ea;
-	background-image: url('');
+	opacity: 0.5;
 	background-size: cover;
 	background-position: 50% 50%;
 	background-repeat: no-repeat;
@@ -77,6 +77,7 @@ h1, h2, h3, h4, h5, h6 {
 	padding-top: auto;
 	padding-bottom: auto;
 	color: white;
+	text-shadow: 2px 2px #007bc7;
 	text-align: center;
 	margin: 100px 0px;
 }
@@ -88,7 +89,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #main-title img {
-	border: 3px solid #007bc7;
+	border: 0px solid #007bc7;
 }
 
 .tech {
